--- a/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/west.xhtml
@@ -42,7 +42,7 @@
  <!--                    <p:menuitem global="false" value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westWpis" rendered="#{WpisView.vatowiecPlde}"/>-->
                         <p:menuitem global="false" value="VAT ewidencje" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westWpis" rendered="#{WpisView.vatowiecPlde}"/>
                         <p:menuitem global="false" value="JPK VAT"  outcome="vatjpk" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}"/>
-                        <p:menuitem global="false" value="VAT-UE"  outcome="vatue" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.podatnikObiekt.vatue}"/>
+                        <p:menuitem global="false" value="VAT-UE"  outcome="vatue" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.isVatowiecUE()}"/>
 
                     <p:menuitem global="false" value="zamknięcie miesiąca"  outcome="zamkniecie" icon="ui-icon-circle-arrow-e"/>
                 </p:menu>
