--- a/npkpir_23/web/wspolny/sub/srodkitablica.xhtml
+++ b/npkpir_23/web/wspolny/sub/srodkitablica.xhtml
@@ -12,55 +12,65 @@
             height: 0px !important;
         }
     </style>
-    <h:form id="formbuttonsrodki">
-        <p:commandButton id="buttonsrodki" value="dodaj środek trwały" onclick="PF('dialog_srodki_dodaj').show();"/>
-        <p:commandButton id="buttondrukowanie" value="drukuj posiadane" style="margin-left: 50px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeli(sTRTabView.posiadane, 'posiadane',0)}"/>
-        <p:commandButton id="buttondrukowanie3" value="drukuj posiadane2" style="margin-left: 20px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeli(sTRTabView.posiadane2, 'posiadane2',1)}"/>
-        <p:commandButton id="buttondrukowanie4" value="drukuj umorzenia plan" style="margin-left: 20px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeliPlan(sTRTabView.posiadane, 'posiadaneplan',2)}"/>
-        <p:commandButton id="buttondrukowanie2" value="drukuj sprzedane" style="margin-left: 20px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeli(sTRTabView.sprzedane, 'sprzedane',0)}"/>
-        <p:selectBooleanCheckbox value="#{sTRTabView.pokazwnip}" itemLabel="pokaż wnip" style="margin-left: 20px;">
-            <p:ajax event="change" partialSubmit="true" update="akordeon" listener="#{sTRTabView.init()}"/>
-        </p:selectBooleanCheckbox>
-    </h:form>
-    <h:form id="formSTR">
-        <p:growl life="3600"  id="mess_add" ><p:autoUpdate/></p:growl>
-        <p:panelGrid id="infosrodki" >
-            <f:facet name="header">
-                <p:row>
-                    <p:column>
-                        <h:outputText value="liczba środków ogółem"/>
-                    </p:column>
-                    <p:column>
-                        <h:outputText value="zakupione w bieżącym rok"/>
-                    </p:column>
-                    <p:column>
-                        <h:outputText value="bez umorzonych całkowicie"/>
-                    </p:column>
-                </p:row>
-            </f:facet>
-            <p:row>
-                <p:column style="text-align: center;">
-                    <h:outputText value="#{sTRTabView.iloscsrodkow}"/>
-                </p:column>
-                <p:column style="text-align: center;">
-                    <h:outputText value="#{sTRTabView.zakupionewbiezacyrok}"/>
-                </p:column>
-                <p:column style="text-align: center;">
-                    <p:selectBooleanCheckbox value="#{sTRTabView.bezcalkowicieumorzonych}" label="bez umorzonych całkowicie" >
-                        <p:ajax event="change" partialSubmit="true" global="false" listener="#{sTRTabView.init}" update=":akordeon:str_posiadane  :akordeon:str_posiadane2 akordeon:str_umorzeniaPlan"
-                                 />
-                    </p:selectBooleanCheckbox>
-                </p:column>
-            </p:row>
-        </p:panelGrid>
-    </h:form>
-        <p:tabView id="akordeon" cache="false">
-            <ui:include src="srodkitrwale/posiadane.xhtml"/>
-            <ui:include src="srodkitrwale/posiadane2.xhtml"/>
-            <ui:include src="srodkitrwale/sprzedane.xhtml"/>
-            <ui:include src="srodkitrwale/umorzenia_plan.xhtml"/>
-            <ui:include src="srodkitrwale/umorzenia.xhtml"/>
-            <ui:include src="srodkitrwale/umorzenia_100.xhtml"/>
-        </p:tabView>
+    <div class="vertical-container">
+        <div class="col-12 md:col-8 lg:col-8" style="max-width: 1240px;" >
+            <h:form id="formbuttonsrodki">
+                <p:panelGrid columns="6">
+                <p:commandButton id="buttonsrodki" value="dodaj środek trwały" style=" width: 150px;"  onclick="PF('dialog_srodki_dodaj').show();"/>
+                <p:commandButton id="buttondrukowanie" value="drukuj posiadane" style="margin-left: 50px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeli(sTRTabView.posiadane, 'posiadane',0)}"/>
+                <p:commandButton id="buttondrukowanie3" value="drukuj posiadane2" style="margin-left: 20px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeli(sTRTabView.posiadane2, 'posiadane2',1)}"/>
+                <p:commandButton id="buttondrukowanie4" value="drukuj umorzenia plan" style="margin-left: 20px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeliPlan(sTRTabView.posiadane, 'posiadaneplan',2)}"/>
+                <p:commandButton id="buttondrukowanie2" value="drukuj sprzedane" style="margin-left: 20px; width: 150px;" actionListener="#{sTRTabView.drukowanietabeli(sTRTabView.sprzedane, 'sprzedane',0)}"/>
+                <p:selectBooleanCheckbox value="#{sTRTabView.pokazwnip}" itemLabel="pokaż wnip" style="margin-left: 20px;">
+                    <p:ajax event="change" partialSubmit="true" update="akordeon" listener="#{sTRTabView.init()}"/>
+                </p:selectBooleanCheckbox>
+                </p:panelGrid>
+            </h:form>
+        </div>
+        <div class="col-12 md:col-4 lg:col-3" style="max-width: 440px;" >
+            <h:form id="formSTR">
+                <p:growl life="3600"  id="mess_add" ><p:autoUpdate/></p:growl>
+                <p:panelGrid id="infosrodki" >
+                    <f:facet name="header">
+                        <p:row>
+                            <p:column>
+                                <h:outputText value="liczba środków ogółem"/>
+                            </p:column>
+                            <p:column>
+                                <h:outputText value="zakupione w bieżącym rok"/>
+                            </p:column>
+                            <p:column>
+                                <h:outputText value="bez umorzonych całkowicie"/>
+                            </p:column>
+                        </p:row>
+                    </f:facet>
+                    <p:row>
+                        <p:column style="text-align: center;">
+                            <h:outputText value="#{sTRTabView.iloscsrodkow}"/>
+                        </p:column>
+                        <p:column style="text-align: center;">
+                            <h:outputText value="#{sTRTabView.zakupionewbiezacyrok}"/>
+                        </p:column>
+                        <p:column style="text-align: center;">
+                            <p:selectBooleanCheckbox value="#{sTRTabView.bezcalkowicieumorzonych}" label="bez umorzonych całkowicie" >
+                                <p:ajax event="change" partialSubmit="true" global="false" listener="#{sTRTabView.init}" update=":akordeon:str_posiadane  :akordeon:str_posiadane2 akordeon:str_umorzeniaPlan"
+                                        />
+                            </p:selectBooleanCheckbox>
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
+            </h:form>
+        </div>
+        <div class="col-12 md:col-9 lg:col-10">
+            <p:tabView id="akordeon" cache="false">
+                <ui:include src="srodkitrwale/posiadane.xhtml"/>
+                <ui:include src="srodkitrwale/posiadane2.xhtml"/>
+                <ui:include src="srodkitrwale/sprzedane.xhtml"/>
+                <ui:include src="srodkitrwale/umorzenia_plan.xhtml"/>
+                <ui:include src="srodkitrwale/umorzenia.xhtml"/>
+                <ui:include src="srodkitrwale/umorzenia_100.xhtml"/>
+            </p:tabView>
+        </div>
+    </div>
 </ui:composition>   
 
