--- a/npkpir_23/web/wspolny/wspolnySrodkiDokUmorzeniowe.xhtml
+++ b/npkpir_23/web/wspolny/wspolnySrodkiDokUmorzeniowe.xhtml
@@ -9,15 +9,32 @@
             <h:outputText value="Ewidencja środków trwałych"></h:outputText>
         </ui:define>
         <ui:define name="body">
-                <f:view>
-                    <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutTablicaSrodkiDok/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutTablicaSrodkiDok/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutTablicaSrodkiDok/west.xhtml"/>   <!-- panel zachodni-->
-                        <pe:layoutPane position="center">
-                            <ui:include src="sub/srodkitablicadokumorzeniowe.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                        </pe:layoutPane>
-                    </pe:layout>
+    
+            <f:view>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutTablicaSrodkiKsiegowa/north.xhtml"/>
+                    </div>
+
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-3 lg:col-2"  style="max-width: 200px;">
+                            <ui:include src="sub/layoutTablicaSrodkiKsiegowa/west.xhtml"/>
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                          <ui:include src="sub/srodkitablicadokumorzeniowe.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                        </div>
+                    </div>
+
+                    <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutTablicaSrodkiKsiegowa/south.xhtml"/>
+                    </div>
+                </div>
                 </f:view>
         </ui:define>
     </ui:composition>
