css pkpir kolejna porcja tym razem importy

--- a/npkpir_23/web/ksiegowa/ksiegowaImportXls.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaImportXls.xhtml
@@ -12,18 +12,34 @@
         <ui:define name="body">
             <f:event type="preRenderComponent" listener="#{importDokumentowGlownyView.init()}"/>
             <f:view>
-                <pe:layout fullPage="true" >
-                    <ui:include src="sub/layoutImporty/north.xhtml"/>  <!-- panel polnocny-->
-                    <ui:include src="sub/layoutImporty/south.xhtml"/>   <!-- panel poludniowy-->
-                    <ui:include src="sub/layoutImporty/west.xhtml"/>   <!-- panel zachodni-->
-                    <ui:include src="sub/layoutImporty/east.xhtml"/>   <!-- panel wchodni-->
-                    <pe:layoutPane position="center">
-                        <bcf:ajaxs/>
-                         <h:outputText value="import dokumentów"/>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutImporty/north.xhtml"/>
+                    </div>
+
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-3 lg:col-2"  style="max-width: 200px;">
+                            <ui:include src="sub/layoutImporty/west.xhtml"/>
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                           <bcf:ajaxs/>
+
                          <ui:include src="../wspolny/sub/importxls.xhtml"/>
-                    </pe:layoutPane>
-                </pe:layout>
+                        </div>
+                    </div>
+
+                   <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutImporty/south.xhtml"/>
+                    </div>
+                </div>
             </f:view>
+        
         </ui:define>
     </ui:composition>
 </html>
