--- a/npkpir_23/web/ksiegowa/ksiegowaNiemcy.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaNiemcy.xhtml
@@ -10,20 +10,33 @@
             <h:outputText value="Podatkowa księga przychodów i rozchodów"></h:outputText>
         </ui:define>
         <ui:define name="body">
-                <f:view>
-                    <p:growl life="3600"  id="messages"  ><p:autoUpdate/></p:growl>
-                    <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutZmianapodatnika/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutZmianapodatnika/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
-                        <ui:include src="sub/layoutZmianapodatnika/east.xhtml"/>   <!-- panel wchodni-->
-                        <pe:layoutPane position="center">
-                                <ui:include src="../wspolny/sub/niemcy.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                        </pe:layoutPane>
+ 
+             <f:view>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>
+                    </div>
 
-                    </pe:layout>
-                </f:view>
-            
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-3 lg:col-2"  style="max-width: 200px;">
+                            <ui:include src="sub/layoutNowy/west.xhtml"/>
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                         <ui:include src="../wspolny/sub/niemcy.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                        </div>
+                    </div>
+
+                   <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/>
+                    </div>
+                </div>
+            </f:view>
         </ui:define>
     </ui:composition>
 </html>
