--- a/npkpir_23/web/wspolny/sub/niemcy.xhtml
+++ b/npkpir_23/web/wspolny/sub/niemcy.xhtml
@@ -7,6 +7,7 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <bcf:ajaxs/>
+    <div class="vertical-container">
     <h:form id="formokresniemcy">
         <p:panel style="padding: 10px;">
         <h:outputText value="okres:" />
@@ -45,6 +46,6 @@
                 </p:tab>
             </p:tabView>
         </p:outputPanel>
-    
+    </div>
 </ui:composition>   
 
