--- a/npkpir_23/web/wspolny/sub/importxlsmelka.xhtml
+++ b/npkpir_23/web/wspolny/sub/importxlsmelka.xhtml
@@ -6,7 +6,8 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     >
-    
+    <div class="vertical-container">
+    <h:outputText value="import dokumentów fiskalizowanych dla JPK"/>
    <h:form id="panelplik">
             <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent">
                     <p:panelGrid columns="1" style="margin-top: 20px;margin-bottom: 10px;">
@@ -89,5 +90,6 @@
             </p:dataTable>
              </p:panelGrid>
         </h:form>
+    </div>
 </ui:composition>   
 
