--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -283,7 +283,7 @@
                 </p:panelGrid>
             </h:form>
         </p:tab>
-        <p:tab id="tab4" title="Oblicz Ryczałt" rendered="#{WpisVieryczalt0ksiega1 eq false}">
+        <p:tab id="tab4" title="Oblicz Ryczałt" rendered="#{WpisView.ryczalt0ksiega1 eq false}">
             <h:outputText value="Uwaga podatnik rozlicza się kwartalnie!" style="font-weight: 900; color: red;" rendered="#{WpisView.mc0kw1}"/>
             <h:form id="formpit1">
                 <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
